--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestCompile 'com.android.support:support-annotations:27.0.1'  // <-- match with the support lib version
+    androidTestCompile 'com.android.support:support-annotations:27.0.1'
+    // <-- match with the support lib version
     androidTestCompile 'info.cukes:cucumber-android:1.2.5@jar'
     androidTestCompile 'info.cukes:cucumber-picocontainer:1.2.4'
 }
