--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     // <-- match with the support lib version
     androidTestCompile 'info.cukes:cucumber-android:1.2.5@jar'
     androidTestCompile 'info.cukes:cucumber-picocontainer:1.2.4'
+    implementation 'com.google.android.gms:play-services:11.6.0'
 }
