--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings">
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.GetOverviewActivity" />
         <activity android:name=".activities.ChooseCalendarActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".GetOverviewActivity" />
+        <activity android:name=".SettingsActivity" />
         <!-- <activity
              android:name=".SettingsActivity"
              android:label="@string/title_activity_settings"></activity>-->
