--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".GetOverviewActivity" />
         <activity android:name=".activities.ChooseCalendarActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity"
+            android:exported="true"/>
         <!-- <activity
              android:name=".SettingsActivity"
              android:label="@string/title_activity_settings"></activity>-->
