--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.GetOverviewActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".activities.ChooseCalendarActivity" />
-        <!-- <activity
-             android:name=".SettingsActivity"
-             android:label="@string/title_activity_settings"></activity>-->
     </application>
-
 </manifest>
